@@ -1,15 +1,15 @@
 package com.graduationProject.medicory.service.pharmacy.impl;
 
-
 import com.graduationProject.medicory.entity.medicationEntities.Prescription;
 import com.graduationProject.medicory.mapper.medicationsMappers.PrescriptionMapper;
-import com.graduationProject.medicory.model.prescription.PrescriptionResponse;
+import com.graduationProject.medicory.model.prescription.PrescriptionResponseDTO;
 import com.graduationProject.medicory.repository.MedicationsRepositories.PrescriptionRepository;
 import com.graduationProject.medicory.service.pharmacy.PharmacyPrescriptionService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -18,37 +18,25 @@ public class PharmacyPrescriptionServiceImpl implements PharmacyPrescriptionServ
     private final PrescriptionMapper prescriptionMapper;
 
     @Override
-    public List<PrescriptionResponse> getAllPrescription(String userCode) {
-//        User user = user
-//todo if user code not exist
+    public List<PrescriptionResponseDTO> getAllPrescription(String userCode) {
         List<Prescription> allPrescriptions = prescriptionRepository.findAllByUserCodePharmacyNeededSortedByUpdatedAt(userCode);
-
-        List<PrescriptionResponse> response = allPrescriptions.stream()
-                .map(prescription -> prescriptionMapper.toResponse(prescription))
-                .toList();
-
-        return response;
+        return allPrescriptions.stream()
+                .map(prescriptionMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
+
     @Override
-    public List<PrescriptionResponse> getActivePrescription(String userCode) {
+    public List<PrescriptionResponseDTO> getActivePrescription(String userCode) {
         List<Prescription> allPrescriptions = prescriptionRepository.findAllActiveByOwnerIdPharmacyNeededSortedByUpdatedAt(userCode);
-
-        List<PrescriptionResponse> response = allPrescriptions.stream()
-                .map(prescription -> prescriptionMapper.toResponse(prescription))
-                .toList();
-
-        return response;
+        return allPrescriptions.stream()
+                .map(prescriptionMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public PrescriptionResponse getPrescriptionById(String userCode, Long prescriptionId) {
-
-        Prescription prescription = prescriptionRepository.findPrescriptionByUserCodeAndPrescriptionId(userCode,prescriptionId).orElseThrow(
-                ()->new IllegalArgumentException("Prescription id is wrong!")
-        );
-        PrescriptionResponse response = prescriptionMapper.toResponse(prescription);
-        return response;
+    public PrescriptionResponseDTO getPrescriptionById(String userCode, Long prescriptionId) {
+        Prescription prescription = prescriptionRepository.findPrescriptionByUserCodeAndPrescriptionId(userCode, prescriptionId)
+                .orElseThrow(() -> new IllegalArgumentException("Prescription id is wrong!"));
+        return prescriptionMapper.toResponseDTO(prescription);
     }
-
-
 }
